style2.css
/*------------*/
/*body*/
/*header 60*/
/*controls 130*/
/*edit-section 212*/
/*responsive 293*/
/*Canvas 444*/
/*truth-table 457*/
/*Dark-mode 498*/
/*Main-menu 533*/
/*Edit-open 619*/
/*------------*/

@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap');

html {
    overflow-y: scroll;
}

*{
    margin: 0;
    padding: 0;
    width: 100%;
}

/*--------------truth-table-----------------*/
#truth-table-container {
    text-align: center;
    margin-top: 6vh;
    margin-bottom: 12vh;
    width: 50%;
    padding-left: 25%;
    padding-right: 25%;
    overflow-y: auto;
    font-size: 2.2vh;
    z-index: 1;
}

#truth-table-container table {
    border: 1px solid;
    margin: 0;
    padding: 0;
    border-collapse: collapse;
    width: 100%;
}

#truth-table-container table .header {
    border: 1px solid;
    padding: 5px;
}

#truth-table-container table td {
    border: 1px dotted;
    width: 20%;
}

#truth-table-container table td.output {
    border-left: 3px double;
    border-right: 3px double;
    font-weight: bold;
}
/*--------------truth-table-end-----------------*/

/*-------Dark-mode-----*/
.dark .edit-back {
    color: #221D1D;
    background:#FFFFFF;
}

.dark .evaluate-btn {
    color: #FFFFFF;
    background:#4C26B8;
}

.dark .icon-back {
    color: #FFFFFF;
    background:rgba(109,110,106,.7);
}

.dark .icon-back:hover {
    background:#4C26B8;
    transition: .5s;
}
/*--------------------*/

/*---------Main-Menu------------*/
li{
    list-style: none;
}

.menu{
    height: 100vh;
    width: 100%;
    z-index: 9999;
    background-color: rgba(76,38,184,97%);
    position: fixed;
    top: 0;
    font-family: 'Josefin Sans', sans-serif;
}

.fa-times{
    position: relative;
    left: 2vw;
    font-size: 2.5vw;
    color: #FFFFFF;
    margin-top: 3vh;
    width: 4vh;
    height: 4vh;
    text-align: center;
    display: block;
}

.menu-content{
    top: 13vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    margin: auto;
    top: 20%;
    position: relative;
    align-items: center;
    width: 400px;
}

.menu-content li{
    margin: 20px;
    color: #FFFFFF;
    font-size: 30px;
    font-weight: 500;
    text-transform: uppercase;
}

.menu-btn-content{
    display: flex;
    flex-direction: column;
    width: 300px;
    color: #FFFFFF;
    text-align: center;
}

.teacher-btn{
    background-color: rgba(0,0,0,.9);
    padding: 10px;
    margin-top: 20px;
}

.toss-btn{
    padding: 10px;
    margin-top: 20px;
    border:solid 2px #FFFFFF;
    color: #FFFFFF;
}

.menu-text{
    font-size: 18px;
}

.menu-text span{
    font-family: 'Josefin Sans', sans-serif;
    font-weight: bold;
}

/*-------------------------------*/

/*-----------Edit-open-------------*/
.edit-open{
    width: 100%;
    height: 100vh;
    background-color: rgba(76,38,184,98%);
    position: sticky;
    top: 0;
    right: 0;
    z-index: 1000;
}

#edit-close{
    color: #FFFFFF;
    font-size: 30px;
    position: relative;
    top: 20px;
    left:40px;
}

.terminal{
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    align-items: center;
    margin-top: 30%;
    font-family: 'Josefin Sans', sans-serif;
}

.terminal h3{
    font-size: 25px;
    color: #FFFFFF;
    text-transform: uppercase;
}

.terminal-select{
    display: flex;
    max-width: 100%;
    margin-top: 30px;
    background-color: rgba(255,255,255,.8);
    padding-top: 10px;
    padding-bottom: 10px;
    border-radius: 10px;
}

.terminal-menu p, .terminal-menu i {
    font-size: 18px;
    color: #221D1D;
    box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
    margin: 10px;
    padding: 10px;
    border-radius: 10px;
}

.terminal-select p:hover{
    background-color: rgba(76,38,184,.9);
    color: #FFFFFF;
    transition: .5s;
}

.terminal-select2{
    margin-top: 30px;
    display: flex;
    max-width: 300px;
}

.terminalBtn{
    font-size: 25px;
    margin: 10px;
    padding: 20px;
    width: 20px;
    height: 20px;
    border-radius: 10px;
    color: #221D1D;
    box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
    background-color: rgba(255,255,255,.8);
}

.select-content{
    flex-direction: column;
}

span.small
{
    font-size: 12px;
    color: #FFFFFF;
    margin-top: 0;
}
/*---------------------------Edit-open-end*/

.no-controls .controls, .closed {
    display: none;
}

.no-controls .sample {
    width: 100%;
    margin-left: 0;
}

.no-controls .sample-content {
    width: 100%;
    height: min(85vh,100vw);
    margin-left: auto;
    margin-right: auto;
}

canvas {
    padding-left: 0;
    padding-right: 0;
    margin-left: auto;
    margin-right: auto;
    display: block;
}

body.dark {
    background: #221D1D;
    color: #ffffff;
}

body.light {
    background: #ffffff;
    color: #000000;
}

.clickable{
    cursor: pointer;
}

/*--------Header----------*/
.overall-header{
    justify-content: center;
    display: flex;
}

.header-left {
    width: 25%;
    text-align: center;
    margin-top: auto;
    margin-bottom: auto;
}

.header-center {
    width: 50%;
    text-align: center;
}

.header-right {
    width: 25%;
    text-align: center;
    margin-top: auto;
    margin-bottom: auto;
}

.header-button {
    font-size: 30px;
    padding: 10px;
    color: #FFFFFF;
    background: linear-gradient(180deg, #832AF4 0%, rgba(80, 84, 186, 0.99) 100%);
    border-radius: 100%;
    width: 30px;
    height: 30px;
    justify-content: center;
}

.instructions{
    width: auto;
    padding: 10px;
    color: #FFFFFF;
    justify-content: center;
    text-align: center;
    position: relative;
    left: 30px;
    font-size: 25px;
    font-family: 'Josefin Sans', sans-serif;
    background: #4C26B8;
}

#dark-mode{
    margin-left: 50px;
    margin-top: 10px;
    font-size: 30px;
    color: #4C26B8;
}

.logo{
    font-family: 'Josefin Sans', sans-serif;
    font-size: 20px;
}
/* ... */

